Swagger API UPDATE : User
