# app/Models/User.php
@@ -13,11 +13,29 @@ use Laravel\Passport\HasApiTokens;
  *     required={"email", "password"},
  *     @OA\Property(property="id",type="integer",format="int32"),
  *     @OA\Property(property="name",type="string"),
+ *     @OA\Property(property="nickname",type="string",format="string"),
  *     @OA\Property(property="email",type="string"),
  *     @OA\Property(property="email_verified_at",type="string",format="date-time"),
+ *     @OA\Property(property="profile_url",type="string"),
  *     @OA\Property(property="password",type="string"),
+ *     @OA\Property(property="login_method",type="string"),
+ *     @OA\Property(property="phone_number",type="string"),
+ *     @OA\Property(property="kakao_token",type="string"),
+ *     @OA\Property(property="naver_token",type="string"),
+ *     @OA\Property(property="facebook_token",type="string"),
+ *     @OA\Property(property="google_token",type="string"),
+ *     @OA\Property(property="receive_push",type="int"),
+ *     @OA\Property(property="is_active",type="int"),
+ *     @OA\Property(property="stop_start_at",type="string",format="date-time"),
+ *     @OA\Property(property="stop_end_at",type="string",format="date-time"),
+ *     @OA\Property(property="last_login_at",type="string",format="date-time"),
+ *     @OA\Property(property="device_type",type="string"),
+ *     @OA\Property(property="user_level",type="string"),
+ *     @OA\Property(property="character_info",type="string",format="json"),
+ *     @OA\Property(property="remember_token",type="string"),
  *     @OA\Property(property="created_at",type="string",format="date-time"),
- *     @OA\Property(property="updated_at",type="string",format="date-time")
+ *     @OA\Property(property="updated_at",type="string",format="date-time"),
+ *     @OA\Property(property="deleted_at",type="string",format="date-time"),
  * )
  *
  * @OA\Schema(
@@ -39,7 +57,6 @@ use Laravel\Passport\HasApiTokens;
  *      )
  * ),
  */
-
 
 class User extends Authenticatable
 {
